# score

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  STM_Structural_Manifold_Whitepaper.aux  STM_Structural_Manifold_Whitepaper.fdb_latexmk  STM_Structural_Manifold_Whitepaper.fls  Task.md  deploy.sh  docker-compose.demo.yml  pyproject.toml  setup.py
UNKNOWN.egg-info/: SOURCES.txt  top_level.txt
analysis/: ann.hnsw  discoveries.json  mms_20170910_ann.hnsw  mms_20170910_postings.json  mms_20170913_ann.hnsw  mms_20170913_postings.json  mms_proposals_lambda035.json  mms_proposals_lambda05.json  mms_proposals_struct.json  mms_proposals_struct_2300.json  mms_proposals_struct_filtered.json  mms_top_strings.txt  mms_top_strings_relaxed.txt  mms_twins_2017-09-07_to_10.json  mms_twins_2017-09-07_to_13.json  mms_twins_2300_to_0913.json  mms_twins_zoom_0708_to_10.json  mms_zoom_2300_ann.hnsw  mms_zoom_2300_postings.json  mms_zoom_2300_state.json  mms_zoom_2300_top_structural.txt  mms_zoom_top_strings.json  mms_zoom_top_structural.txt  proposals.json  proposals_theme1_to_3.json  proposals_theme2_to_1.json  router_config.json  sample_state.json  sample_state_native.json  score_state_native.json  sep_spt_impl_state_clean.json  signature_postings.json
configs/: mms_stream.yaml  themis.yaml
cpp/: append_only_writer.h  forward_window_result_impl.h  manifold_record.h  qfh_native.cpp  qfh_native.h  sep_quantum.cpp
dashboard/: stm_monitor.py
demo/: __init__.py  demo_payload.json  standalone.py
docker/: Dockerfile.demo-api  Dockerfile.demo-frontend  nginx.demo.conf
docs/: 2509.13351v1.txt  API.md  CodeTraceAdapter.md  DEMO_DEPLOYMENT.md  Demo_Runbook.md  INDEX.md  Outreach_Templates.md  Pilot_SOW_Template.md  STM_OnePager.md  SUITE.md  TODO.md  TOOL_QUICKSTART.md  calibration_checklist.md  integration_with_sep.md  manifolds_attention_draft.md  mms_run_report.md  output.txt  overview.md  task.md  weather_signal_pipeline.md  weather_signal_whitepaper.md
notebooks/: noaa_weather_manifold.ipynb  noaa_weather_manifold__KATT_2025-10-01.ipynb  noaa_weather_manifold__KHOU_2025-10-01.ipynb
results/: attention_logs.txt  bench_seen_200.txt  bench_seen_400.txt  bench_seen_50.txt  bench_seen_600.txt  bench_seen_latest.txt  docs_demo_metrics.json  docs_demo_stream_llm.jsonl  experiment1_summary.json  final_guardrail_analysis.json  logistics_baseline_config.base.json  logistics_baseline_config.coverage.json  logistics_baseline_config.json  logistics_baseline_config.permutation.json  logistics_baseline_config.permutation_base.json  logistics_baseline_perm.json  logistics_causal_config.coverage.json  logistics_causal_config_opt.base.json  logistics_causal_config_opt.coverage.json  logistics_causal_config_opt.json  logistics_causal_config_opt.permutation.json  logistics_causal_config_opt.permutation_base.json  logistics_causal_perm.json  logistics_causal_perm_opt.json  logistics_cov1500_ent99985_config.coverage.json  logistics_cov1500_ent99985_config.json  logistics_cov1500_ent99985_config.permutation.json  logistics_cov1500_ent99985_config.permutation_base.json  logistics_cov1500_ent99987_config.coverage.json  logistics_cov1500_ent99987_config.permutation.json  logistics_cov1500_ent99987_config.permutation_base.json  logistics_cov1500_ent99990_config.base.json  logistics_cov1500_ent99990_config.coverage.json  logistics_cov1500_ent99990_config.permutation.json  logistics_cov1500_ent99990_config.permutation_base.json  logistics_cov1600_ent99985_config.base.json  logistics_cov1600_ent99985_config.coverage.json  logistics_cov1600_ent99985_config.permutation.json  logistics_cov1600_ent99985_config.permutation_base.json  logistics_cov1600_ent99990_config.coverage.json  (+79 more)
score/: __init__.py
scripts/: __init__.py  aggregate_attention_snapshots.py  aggregate_planbench_results.py  ann_bootstrap.py  augment_hover_multi_hop.py  benchmark_seen.py  calibrate_router.py  calibrate_temperature.py  compute_bridge_metrics.py  convert_fever_to_eval.py  convert_hover_to_eval.py  convert_scifact_to_eval.py  encode_struct_bits.py  enforce_structural.py  enrich_features.py  enrich_twin_corpus.py  eval_feature_utils.py  evaluate_reliability.py  export_openapi.py  fetch_mms.py  generate_planbench_dataset.py  generate_receipt_tables.py  generate_synthetic_traces.py  generate_whitepaper_tables.py  guardrail_sweep.py  inject_plan_corruption.py  lead_permutation.py  lead_time_density.py  logistics_guardrail_demo.py  make_eval_from_pack.py  make_scorecard.py  planbench_to_stm.py  plot_attention_summary.py  plot_guardrail_overlay.py  plot_logistics_guardrail_figures.py  plot_reliability_results.py  plot_structural_window.py  plot_tau_sweep.py  plot_whitepaper_figures.py  reality_filter_eval.py  (+20 more)
src/: CMakeLists.txt
src copy/: CMakeLists.txt
src/app/: byte_stream_manifold_main.cpp  data_downloader_main.cpp  manifold_generator_main.cpp  quantum_metrics_c_api.cpp
src/core/: byte_stream_manifold.cpp  byte_stream_manifold.h  qfh.cpp  trading_signals.cpp  trajectory.h
src/reality_filter/: __init__.py  engine.py  repair.py  sources.py
src/sbi/: __init__.py  index.py  span_corpus.py
src/sep_text_manifold/: __init__.py  api.py  attn_ospace.py  binary_log.py  cli.py  cli_lead.py  cli_plots.py  comparison.py  demo_server.py  dilution.py  encode.py  feedback.py  filters.py  gpu_windows.py  guardrail.py  index_builder.py  ingest.py  manifold.py  native.py  pipeline.py  propose.py  scoring.py  seen.py  semantic.py  similar.py  stream.py  strings.py  themes.py
src/sep_text_manifold.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/stm_adapters/: __init__.py  code_trace_adapter.py  nasa_themis.py  pddl_trace.py
src/stm_backtest/: __init__.py  backtester.py  data.py  reporting.py  signals.py
src/stm_cli/: __init__.py  __main__.py
src/stm_client/: __init__.py  client.py
src/stm_demo/: __init__.py  __main__.py  api.py  reference_agent_loop.py
src/stm_onsets/: __init__.py  cli.py  rules.py
src/stm_stream/: __init__.py  core.py  reader_kafka.py  router.py  runtime.py
(+2910 files in other folders)
