[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sep-text-manifold"
version = "0.1.0"
description = "Text analysis framework based on SEP's quantum metrics"
authors = [ { name = "SepDynamics", email = "contact@sepdynamics.example" } ]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "pydantic>=2.0",
    "uvicorn>=0.27.0",
    "python-multipart>=0.0.9",
    "websockets>=12.0",
    # Optional dependency for community detection and centrality metrics
    "networkx>=3.0",
    "numpy>=1.23",
    "PyYAML>=6.0",
]


[project.optional-dependencies]
test = [
    "pytest>=7.0",
]
demo = [
    "flask>=3.0",
]
native = [
    "pybind11>=2.11",
]
index = [
    "hnswlib>=0.8.0",
]
stream = [
    "kafka-python>=2.0",
]
onsets = [
    "cdflib>=1.0",
]

[project.scripts]
stm = "stm_cli.__main__:main"
stm-plots = "sep_text_manifold.cli_plots:main"
stm-leadtime = "sep_text_manifold.cli_lead:main"
stm-demo-api = "stm_demo.__main__:main"
